Changed api protocol.

--- a/src/styles/_items.scss
+++ b/src/styles/_items.scss
@@ -33,4 +33,11 @@
       font-weight: bold;
     }
   }
+
+  .items-api-error {
+    text-align: center;
+    margin: auto 0;
+    padding: 100px 0;
+    color: #aeaeae;
+  }
 }
